Add Minor Fixes To ConferenceUtils
Part of #13476